dev/afj-test-ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: afj-test-ingress 
  namespace: afj-test-app 
  annotations: 
    alb.ingress.kubernetes.io/load-balancer-name: afj-test-ingress 
    alb.ingress.kubernetes.io/target-type: ip 
    alb.ingress.kubernetes.io/scheme: internal 
    alb.ingress.kubernetes.io/healthcheck-path: / 
spec: 
  ingressClassName: alb 
  rules: 
    - http: 
        paths: 
          - path: / 
            pathType: Prefix 
            backend: 
              service: 
                name: afj-test-service 
                port: 
                  name: svc-port
